# DarghosTFS04_v4

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  allocator.cpp  build.sh  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  config.h  config.h.in~  config.lua  config.status  configmanager.cpp  configmanager.h  configure  configure.ac  connection.cpp  connection.h  const.h  container.h  creature.cpp  creatureevent.cpp  darghos_const.h  darghos_pvp.cpp  darghos_pvp.h  database.cpp  database.h  databasemanager.cpp  databasemysql.cpp  docker-compose.yml  enums.h  exception.cpp  (+25 more)
XML/: channels.xml  groups.xml  outfits.xml  quests.xml  servers.xml  vocations.xml
actions/: actions.xml
actions/lib/: actions.lua
actions/scripts/: default.lua
autom4te.cache/: output.1  requests  traces.0  traces.1
creaturescripts/: creaturescripts.xml
creaturescripts/lib/: creaturescripts.lua
creaturescripts/scripts/: idle.lua  login.lua  skullcheck.lua
data/XML/: channels.xml  groups.xml  outfits.xml  servers.xml  stages.xml
data/actions/: actions.xml
data/creaturescripts/: creaturescripts.xml
data/globalevents/: globalevents.xml
data/items/: items.xml
data/lib/: 050-function.lua  100-compat.lua  darghos.lua  global.lua
data/monster/: loots  monsters.xml
data/movements/: movements.xml
data/npc/: aaragon.acessorios.xml  aaragon.bank.xml  aaragon.joia.xml  aaragon.magic.xml  aaragon.pillow.xml  aaragon.plants.xml  aaragon.postman.xml  aaragon.promotion.xml  aaragon.tables.xml  aaragon.tapete.xml  aaragon.temple.xml  aaragon.vase.xml  aracura.armors.xml  aracura.food.xml  aracura.postman.xml  aracura.temple.xml  aracura.travel0.xml  aracura.weapons.xml  battleground.magic1.xml  battleground.magic2.xml  bless.1.xml  bless.2.xml  bless.3.xml  bless.4.xml  bless.5.xml  djin.1.xml  djin.2.xml  djin1.alessar.xml  djin1.yaman.xml  djin2.haroun.xml  djin2.nahbob.xml  global.aosoth.xml  global.oldrak.xml  global.quaras.xml  global.rashid.xml  global.reborn.xml  global.santa_claus.xml  global.soft.xml  isle_of_peace.acessorios.xml  isle_of_peace.bank.xml  (+83 more)
data/spells/: spells.xml
data/talkactions/: talkactions.xml
data/weapons/: weapons.xml
data/world/: -spawn.xml
doc/: CHANGELOG  README
globalevents/: globalevents.xml
globalevents/lib/: globalevents.lua
globalevents/scripts/: save.lua
items/: items.otb  items.xml
lib/: 000-constant.lua  012-table.lua  031-vocations.lua  darghos.lua  global.lua
lib/darghos/: aids.lua  arena.lua  configs.lua  const.lua  dungeons.lua  e_bking.lua  e_dark_general.lua  e_ent.lua  functions.lua  gids.lua  lib_actions.lua  lib_changelog.lua  lib_item_shop.lua  lib_movements.lua  lib_playerhistory.lua  premium.lua  pvp_battleground.lua  sids.lua  stages.lua  tasks.lua  teleports.lua  uids.lua
monster/: monsters.xml
monster/Drakens/: draken abomination.xml  draken elite.xml  draken spellweaver.xml  draken warmaster.xml
monster/Nieruzad/: Nieruzad.xml  nieruzad banshee.xml  nieruzad ghost.xml  nieruzad ghoul.xml  nieruzad zombie.xml  summon nieruzad banshee.xml  summon nieruzad ghost.xml  summon nieruzad ghoul.xml  summon nieruzad zombie.xml
monster/annelids/: rotworm.xml
monster/aracnids/: Spider Boss.xml  giant spider.xml  giant spoke.xml
monster/ariadne/: ariadne adept.xml  macrocheira.xml
monster/barbarians/: barbarian bloodwalker.xml
monster/beholders/: gran brain.xml
monster/birds/: chicken.xml  penguin.xml
monster/bosses/: apprentice sheng.xml  ferumbras.xml  (+13 more)
movements/: movements.xml
msvc2010/: The Forgotten Server.sln  The Forgotten Server.vcxproj  The Forgotten Server.vcxproj.filters
npc/: aaragon.armors.xml  aaragon.box.xml  aaragon.distance.xml  aaragon.food.xml  aaragon.temple.xml  aaragon.travel0.xml  aaragon.weapons.xml  aracura.acessorios.xml  aracura.bank.xml  aracura.distance.xml  aracura.furniture.xml  aracura.joia.xml  aracura.magic.xml  aracura.temple.xml  global.addons.xml  global.bonartes.xml  global.church.xml  global.inquisition.xml  global.mines.xml  global.soft.xml  isle_of_peace.armors.xml  isle_of_peace.distance.xml  isle_of_peace.food.xml  isle_of_peace.tasks_second.xml  isle_of_peace.tasks_seventh.xml  kashmir.bank.xml  kashmir.distance.xml  kashmir.magic.xml  kashmir.temple.xml  nargor.back.xml  nargor.go.xml  north.box.xml  north.food.xml  north.magic.xml  north.pillow.xml  north.tables.xml  north.temple.xml  quendor.armors.xml  quendor.box.xml  quendor.food.xml  (+13 more)
raids/: raids.xml
spells/: spells.xml
src/: .gitignore  CMakeLists.txt  admin.cpp  beds.cpp  chat.cpp  combat.cpp  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.h  const.h  container.cpp  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  darghos_pvp.cpp  darghos_pvp.h  database.cpp  databasemysql.cpp  databasemysql.h  definitions.h  dispatcher.cpp  enums.h  fileloader.cpp  fileloader.h  game.cpp  game.h  globalevent.cpp  ioban.cpp  ioguild.cpp  iologindata.cpp  iologindata.h  item.cpp  items.cpp  items.h  luascript.cpp  luascript.h  manager.cpp  (+48 more)
src/doc/: TODO_04
src/msvc2010/: The Forgotten Server.vcxproj
src/src/: CMakeLists.txt  account.h  baseevents.cpp  chat.h  combat.cpp  configmanager.h  connection.cpp  const.h  creature.h  creatureevent.cpp  creatureevent.h  cylinder.h  darghos_pvp.cpp  darghos_pvp.h  database.h  databasemysql.cpp  definitions.h  dispatcher.h  enums.h  game.cpp  game.h  globalevent.cpp  ioban.h  iologindata.cpp  iologindata.h  iomap.cpp  item.h  items.cpp  luascript.cpp  luascript.h  monster.h  monsters.cpp  networkmessage.h  npc.cpp  otserv.cpp  outputmessage.cpp  party.cpp  player.cpp  player.h  position.cpp  (+21 more)
talkactions/: talkactions.xml
world/: -house.xml  -spawn.xml
(+969 files in other folders)
